[gd_scene load_steps=27 format=2]

[ext_resource path="res://Prefabs/Utils/Backend/MusicSetter.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sprites/UI/Other/Logo.png" type="Texture" id=2]
[ext_resource path="res://Scripts/UI/MainMenu/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://Sprites/UI/Fonts/Tiny_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://Sprites/UI/Hud/HP_bar.png" type="Texture" id=5]
[ext_resource path="res://Sprites/UI/Hud/Boost_bar.png" type="Texture" id=6]
[ext_resource path="res://Sprites/UI/Fonts/Small_font.tres" type="DynamicFont" id=7]
[ext_resource path="res://Sprites/Mechs/Heads/Shield-head.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Mechs/Heads/EMP-head.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Mechs/Heads/Mine-head.png" type="Texture" id=10]

[sub_resource type="Shader" id=1]
code = "/*
	電子的十字背景シェーダー by あるる（きのもと 結衣） @arlez80
	Electric Hatch Background Shader by KINOMOTO Yui @arlez80

	MIT License
*/
shader_type canvas_item;

const float PI = 3.1415926535;

uniform float speed = 0.05;
uniform vec2 scale = vec2( 8.0, 4.5 );
uniform float rotate_speed = 1.1;
uniform float line_width : hint_range( 0.0, 1.0 ) = 0.1;
uniform float line_size = 0.1;

uniform vec4 back_color : hint_color = vec4( 0.0, 0.0, 0.0, 1.0 );
uniform vec4 line_color : hint_color = vec4( 0.0, 1.0, 1.0, 1.0 );

float get_ratio_scan_line( float p )
{
	return max(
		-sin( mod( p, line_size ) / line_size * PI ) + line_width
	,	0.0
	) / line_width;
}

float hatch( vec2 src_uv, float time, float dir )
{
	float r = time * rotate_speed * dir;
	float c = cos( r );
	float s = sin( r );
	mat2 matr = mat2(
		vec2( c, s )
	,	vec2( -s, c )
	);
	vec2 uv = ( ( src_uv - vec2( 0.5, 0.5 ) ) * scale * time * 0.5 ) * matr;
	return clamp( 
		(
			get_ratio_scan_line( uv.x )
		+	get_ratio_scan_line( uv.y )
		) * sin( time * PI ) * 4.0
	,	0.0
	,	1.0
	);
}

void fragment( )
{
	float time = mod( TIME * speed, 0.3 ) / 0.3;
	float f = clamp(
		hatch( SCREEN_UV, time, 1.0 )
	+	hatch( SCREEN_UV, mod( time + 0.5, 1.0 ), -1.0 )
	,	0.0
	,	1.0
	);

	COLOR = mix( back_color, line_color, f );
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/speed = 0.01
shader_param/scale = Vector2( 8, 4.5 )
shader_param/rotate_speed = 0.5
shader_param/line_width = 0.1
shader_param/line_size = 0.1
shader_param/back_color = Color( 0, 0, 0, 1 )
shader_param/line_color = Color( 0.388235, 0.780392, 0.301961, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxLine" id=8]
color = Color( 0.545098, 0.607843, 0.705882, 1 )
grow_begin = -19.0
grow_end = -19.0
thickness = 8

[sub_resource type="StyleBoxLine" id=9]
color = Color( 1, 1, 1, 1 )
grow_begin = -18.0
thickness = 6

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="Shader" id=26]
code = "shader_type canvas_item;

// Ranges from 0 to 1 over the course of the transition.
// We use this to actually animate the shader.
uniform float progress : hint_range(0, 1);

// Size of each diamond, in pixels.
uniform float diamondPixelSize = 10.0f;

void fragment() {
	float xFraction = fract(FRAGCOORD.x / diamondPixelSize);
	float yFraction = fract(FRAGCOORD.y / diamondPixelSize);
	float xDistance = abs(xFraction - 0.5);
	float yDistance = abs(yFraction - 0.5);
	if (xDistance + yDistance + UV.x + UV.y > progress * 4.0f) {
		discard;
	}
}"

[sub_resource type="ShaderMaterial" id=27]
resource_local_to_scene = true
shader = SubResource( 26 )
shader_param/progress = 1.0
shader_param/diamondPixelSize = 45.0

[node name="MainMenu" type="Node"]
script = ExtResource( 3 )

[node name="MusicSetter" parent="." instance=ExtResource( 1 )]

[node name="Tween" type="Tween" parent="."]

[node name="Menu" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="Menu"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Graphics" type="Control" parent="Menu/Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="ColorRect" parent="Menu/Control/Graphics"]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1

[node name="Logo" type="TextureRect" parent="Menu/Control/Graphics"]
anchor_top = -0.0357143
anchor_right = 1.0
anchor_bottom = 0.964286
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Credit" type="RichTextLabel" parent="Menu/Control/Graphics"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -16.0
margin_right = 124.0
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "[rainbow] Game  by  Tenseven"
text = " Game  by  Tenseven"
scroll_active = false

[node name="StartMenu" type="Control" parent="Menu/Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Start_button" type="Button" parent="Menu/Control/StartMenu"]
anchor_left = 0.43125
anchor_top = 0.620536
anchor_right = 0.56875
anchor_bottom = 0.745536
margin_right = -1.52588e-05
custom_fonts/font = ExtResource( 7 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Setting_button" type="Button" parent="Menu/Control/StartMenu"]
anchor_left = 0.39625
anchor_top = 0.745536
anchor_right = 0.60625
anchor_bottom = 0.870536
custom_fonts/font = ExtResource( 7 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Quit_button" type="Button" parent="Menu/Control/StartMenu"]
anchor_left = 0.43125
anchor_top = 0.870536
anchor_right = 0.56875
anchor_bottom = 0.995536
margin_right = -1.52588e-05
custom_fonts/font = ExtResource( 7 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="SettingsMenu" type="Control" parent="Menu/Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Menu/Control/SettingsMenu"]
anchor_left = 0.40125
anchor_top = 0.232143
anchor_right = 0.59875
anchor_bottom = 0.357143
custom_fonts/font = ExtResource( 7 )
text = "Volume"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="SoundSlider" type="HSlider" parent="Menu/Control/SettingsMenu"]
anchor_left = 0.335
anchor_top = 0.285714
anchor_right = 0.675
anchor_bottom = 0.5
custom_icons/grabber_disabled = ExtResource( 9 )
custom_icons/grabber_highlight = ExtResource( 10 )
custom_icons/grabber = ExtResource( 8 )
custom_styles/slider = SubResource( 8 )
custom_styles/grabber_area_highlight = SubResource( 9 )
custom_styles/grabber_area = SubResource( 9 )
min_value = -80.0
max_value = 0.0
value = -80.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Fullsceen_check" type="CheckBox" parent="Menu/Control/SettingsMenu"]
anchor_left = 0.29375
anchor_top = 0.441964
anchor_right = 0.70625
anchor_bottom = 0.647321
custom_fonts/font = ExtResource( 7 )
custom_icons/checked = ExtResource( 5 )
custom_icons/unchecked = ExtResource( 6 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
custom_styles/disabled = SubResource( 13 )
custom_styles/hover_pressed = SubResource( 10 )
custom_styles/normal = SubResource( 15 )
text = "Fullscreen"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Back_button" type="Button" parent="Menu/Control/SettingsMenu"]
anchor_left = 0.43125
anchor_top = 0.736607
anchor_right = 0.56875
anchor_bottom = 0.861607
margin_right = -1.52588e-05
custom_fonts/font = ExtResource( 7 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TransitionScreen" type="ColorRect" parent="Menu/Control"]
material = SubResource( 27 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[connection signal="pressed" from="Menu/Control/StartMenu/Start_button" to="." method="_on_Start_button_pressed"]
[connection signal="pressed" from="Menu/Control/StartMenu/Setting_button" to="." method="_on_Setting_button_pressed"]
[connection signal="pressed" from="Menu/Control/StartMenu/Quit_button" to="." method="_on_Quit_button_pressed"]
[connection signal="value_changed" from="Menu/Control/SettingsMenu/SoundSlider" to="." method="_on_SoundSlider_value_changed"]
[connection signal="toggled" from="Menu/Control/SettingsMenu/Fullsceen_check" to="." method="_on_CheckBox_toggled"]
[connection signal="pressed" from="Menu/Control/SettingsMenu/Back_button" to="." method="_on_Back_button_pressed"]
